# fixture-graph

./: .gitignore  CONTRIBUTING.md  README.md  example-config.json  pyproject.toml
.github/workflows/: ci.yml
src/fixture_graph/: __init__.py  cli.py  core.py  verbosity.py
tests/: test_cli.py  test_core.py
