[project]
name = "fixture-graph"
version = "0.1.0"
description = "Render pytest setup plan as a condensed Graphviz graph"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Jacques Rimbault", email = "jacques.rimbault@gmail.com" }]
license = { text = "MIT" }
keywords = ["pytest", "graphviz", "testing", "visualization"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = ["pydantic>=2.12.5", "tyro>=1.0.11"]

[dependency-groups]
dev = ["pytest>=8.3.4", "ruff>=0.8.4", "pyright>=1.1.391", "pytest-cov>=7.1.0"]

[project.scripts]
fixture-graph = "fixture_graph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fixture_graph"]

[tool.ruff.lint]
extend-select = ["E4", "E7", "E9", "F", "I", "B", "Q", "RUF", "PL", "FLY", "N"]

[tool.ruff.lint.isort]
known-first-party = ["fixture_graph"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=fixture_graph",
    "--cov-report=xml:coverage.xml",
    "--cov-report=term",
    "--junit-xml=report.xml",
]
